@@ -174,6 +174,7 @@ Release 0.19.0 - Unreleased
    HBASE-1048  HLog: Found 0 logs to remove out of total 1450; oldest
                outstanding seqnum is 162297053 fr om region -ROOT-,,0
    HBASE-1055  Better vm stats on startup
+   HBASE-1065  Minor logging improvements in the master
 
   NEW FEATURES
    HBASE-875   Use MurmurHash instead of JenkinsHash [in bloomfilters]
